<resources>
    <string name="app_name">Student Grade Calculator</string>
    <string name="grade_hint">Score (0-100)</string>
    <string name="name_hint">Student Name</string>
    <string name="calculate_button">Add to Sheet</string>
    <string name="result_format">Grade: %1$s</string>
    <string name="error_invalid_input">Invalid score</string>
    <string name="error_invalid_name">Please enter a name</string>
    <string name="error_out_of_range">Score must be 0-100</string>
    <string name="header_name">Name</string>
    <string name="header_score">Score</string>
    <string name="header_grade">Grade</string>
</resources>